# WEB_HW_14

./: README.md  alembic.ini  draft.py  main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: e1df1cf262d7_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  1249  1259  16384  16387  16389  16398  16400  16402  16410  16411  16413  16420  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+2 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_unit_repository_contacts.py
